--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 downloadcache = {toxworkdir}/cache/
 envlist =
-    {core}-{py27,py34}-{django18,django110,django111},
+    {py27,py34}-{django18,django19,django110,django111},
 
 [testenv]
 passenv = DATABASE_URL
@@ -11,16 +11,12 @@ basepython =
     py35: python3.5
     py36: python3.6
 commands =
-    core: py.test --cov=metric
-    example: python manage.py test
+    python manage.py test
 deps =
     django-environ
-    core: mock>=0.7.2
-    core: setuptools>=17.1
-    core: pyflakes
-    core: pytest
-    core: pytest-django
-    core: pytest-cov
-    django18: django==1.8.17
+    django-model-utils
+    factory_boy
+    django18: django>1.8<1.9
+    django19: django>1.9<1.10
     django110: django>=1.10<1.11
     django111: django>=1.11<1.12
