--- a/.travis.yml
+++ b/.travis.yml
@@ -7,33 +7,24 @@ cache:
 
 env:
   fast_finish: true
-  global:
-    - DATABASE_URL="mysql://root:@localhost/test_poradnia"
+#  global:
+#    - DATABASE_URL="mysql://root:@localhost/test_poradnia"
   matrix:
     - TOX_ENV=flake8
-    - TOX_ENV=py27-dj110-coveralls
-    - TOX_ENV=py27-dj111-coveralls
-    - TOX_ENV=py27-djmaster-coveralls
-    - TOX_ENV=py34-dj110-coveralls
-    - TOX_ENV=py34-dj111-coveralls
-    - TOX_ENV=py34-djmaster-coveralls
-
-matrix:
-  allow_failures:
-    - env: TOX_ENV=flake8
-    - env: TOX_ENV=py27-dj111-coveralls
-    - env: TOX_ENV=py27-djmaster-coveralls
-    - env: TOX_ENV=py34-dj111-coveralls
-    - env: TOX_ENV=py34-djmaster-coveralls
+    - TOX_ENV=py27-dj19
+    - TOX_ENV=py27-dj18
+    - TOX_ENV=py27-dj110
+    - TOX_ENV=py27-dj111
+    - TOX_ENV=py34-dj19
+    - TOX_ENV=py34-dj18
+    - TOX_ENV=py34-dj110
+    - TOX_ENV=py34-dj111
 
 install:
   - pip install -U pip wheel
   - pip install tox
 script:
   - tox -e $TOX_ENV
-
-notifications:
-  slack: watchdogpolska:mQq180xGu9UcuJgK73hVWECD
 
 after_script:
 - rm $HOME/.cache/pip/log/*
