Update setup.py & tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -12,10 +12,8 @@ basepython =
 commands =
     python manage.py test
 deps =
-    django-environ
-    django-model-utils
-    factory_boy
-    django18: django>1.8<1.9
-    django19: django>1.9<1.10
-    django110: django>=1.10<1.11
-    django111: django>=1.11<1.12
+    .[tests]
+    dj18: django>1.8<1.9
+    dj19: django>1.9<1.10
+    dj110: django>=1.10<1.11
+    dj111: django>=1.11<1.12
