--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py34}-dj{18,19,110,111},
+    {py27,py34}-dj{18,19,110,111}, flake8
 
 [testenv]
 passenv = DATABASE_URL
@@ -17,3 +17,10 @@ deps =
     dj19: django>1.9<1.10
     dj110: django>=1.10<1.11
     dj111: django>=1.11<1.12
+
+[testenv:flake8]
+basepython = python2.7
+commands =
+    flake8
+deps =
+    flake8
